--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://github.com/mehrain # change to your github homepage
-    # - https://www.linkedin.com/in/marijn-rovers-810a702b9/ # change to your twitter homepage
+    - https://twitter.com/elonmusk # change to your twitter homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
